[tool.poetry]
name = "simula-ligths-api"
version = "0.1.0"
description = ""
authors = ["Thorvald Ballestad", "Henrik Finsberg", "Min RK"]
readme = "README.md"
packages = [{include = "simula_ligths_api"}]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.15.2"
click = "^8.1.7"
numpy = "^1.26.2"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
