[metadata]
name = simula-lights
version = 0.0.1
description = Tool controlling the lights at the KA23
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ComputationalPhysiology/simula-lights
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = light, KA23, simula

[options]
install_requires =
    selenium
    click
    numpy
    Pillow
    webdriver-manager
python_requires = >=3.7
py_modules=['lights']

[options.entry_points]
console_scripts =
    lights = lights:lights


