[metadata]
name = simula-lights
version = 0.0.1
description = Tool controlling the lights at KA23
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/ComputationalPhysiology/simula-lights
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = light, KA23, simula

[options]
install_requires =
    selenium
    click
    numpy
    Pillow
python_requires = >=3.7
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    lights = simula_lights.lights:lights


